--- a/css/shopping.css
+++ b/css/shopping.css
@@ -17,4 +17,10 @@ body{
     background-color: #f1f0f7;
     border-radius: 20px;
 }
-
+.header {
+    height: 48px;
+    padding: 8px;
+    font-size: 24px;
+    background: rgb(250, 63, 251);
+    background: linear-gradient(90deg, rgba(250, 63, 251, 0.5704875700280112) 24%, rgba(70, 167, 252, 0.7245491946778712) 51%);
+}
