--- a/css/shopping.css
+++ b/css/shopping.css
@@ -23,4 +23,12 @@ body{
     font-size: 24px;
     background: rgb(250, 63, 251);
     background: linear-gradient(90deg, rgba(250, 63, 251, 0.5704875700280112) 24%, rgba(70, 167, 252, 0.7245491946778712) 51%);
+    border-radius:  20px 20px 0 0;
+    color: white;
 }
+.footer{
+    background: rgb(250, 63, 251);
+    background: linear-gradient(90deg, rgba(250, 63, 251, 0.5704875700280112) 24%, rgba(70, 167, 252, 0.7245491946778712) 51%);
+    border-radius: 0 0 20px 20px;
+}
+
