--- a/css/shopping.css
+++ b/css/shopping.css
@@ -6,6 +6,11 @@ ul{
     padding: 0;
 
 }
+button{
+    outline:none;
+    background:transparent;
+    border: none;
+}
 body{
     background-color:#ced3df;
     text-align: center;
@@ -25,6 +30,25 @@ body{
     background: linear-gradient(90deg, rgba(250, 63, 251, 0.5704875700280112) 24%, rgba(70, 167, 252, 0.7245491946778712) 51%);
     border-radius:  20px 20px 0 0;
     color: white;
+}
+.items{
+    height:500px;
+    overflow-y:auto;
+/*    when the item increase, it automatically create scroll bar*/
+}
+.item{
+    display:flex;
+    justify-content: space-between;
+    padding: 8px 32px 8px 32px;
+}
+.item_delete{
+    cursor:pointer;
+}
+.item_divider{
+    width:90%;
+    height:1px;
+    background-color:lightgray;
+    margin: auto;
 }
 .footer{
     background: rgb(250, 63, 251);
