--- a/css/shopping.css
+++ b/css/shopping.css
@@ -10,6 +10,7 @@ button{
     outline:none;
     background:transparent;
     border: none;
+    cursor: pointer;
 }
 body{
     background-color:#ced3df;
@@ -42,7 +43,14 @@ body{
     padding: 8px 32px 8px 32px;
 }
 .item_delete{
+    font-size:18px;
     cursor:pointer;
+    transition: all 300ms ease-in;
+
+}
+.item_delete:hover{
+    color:red;
+    transform: scale(1.1);
 }
 .item_divider{
     width:90%;
@@ -54,5 +62,20 @@ body{
     background: rgb(250, 63, 251);
     background: linear-gradient(90deg, rgba(250, 63, 251, 0.5704875700280112) 24%, rgba(70, 167, 252, 0.7245491946778712) 51%);
     border-radius: 0 0 20px 20px;
+}
+.footer_input{
+    width:100%;
+    height: 32px;
+    border: none;
+    outline: none;
+    font-size: 24px;
+    padding:0 16px;
+}
+.footer_button{
+    width:48px;
+    height:48px;
+    background-color: black;
+    border-radius:50%;
+    color:white;
 }
 
