--- a/css/shopping.css
+++ b/css/shopping.css
@@ -77,5 +77,9 @@ body{
     background-color: black;
     border-radius:50%;
     color:white;
+    transition: transform 300ms ease-in;
+}
+.footer_button:hover{
+    transform:scale(1.1);
 }
 
