--- a/css/shopping.css
+++ b/css/shopping.css
@@ -22,6 +22,10 @@ body{
     margin: auto;
     background-color: #f1f0f7;
     border-radius: 20px;
+    -webkit-box-shadow: 10px 0px 77px 11px rgba(252,189,218,1);
+    -moz-box-shadow: 10px 0px 77px 11px rgba(252,189,218,1);
+    box-shadow: 10px 0px 77px 11px rgba(252,189,218,1);
+
 }
 .header {
     height: 48px;
